# hermaphrodite

./: Cargo.toml  README.md  test.nbt
bedrock-intake/: Cargo.toml
compile-in/: Cargo.toml
compile-in/src/: main.rs
hermaphrodite/: Cargo.toml
hermaphrodite/src/: interface.rs  lib.rs  main.rs  server.rs  util.rs
java-intake/: Cargo.toml
java-intake/examples/: test.rs
java-intake/src/: lib.rs  nbt.rs  packet.rs  server.rs  socket.rs  types.rs
serde-primitives/: Cargo.toml
serde-primitives-macro/: Cargo.toml
serde-primitives-macro/src/: lib.rs
serde-primitives/src/: lib.rs
src/: interface.rs  java.rs  main.rs  server.rs  util.rs
src/java/: mod.rs  packet.rs  server.rs  types.rs
