[package]
name = "java-intake"
version = "0.1.0"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
edition = "2018"

[dependencies]
hermaphrodite = {path = "../hermaphrodite"}
maplit = "1.0.2"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
serde-primitives = {path = "../serde-primitives"}
